<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="backClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="buttonClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="product"
            type="com.example.jetpack.repository.local.Product" />
    </data>


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:background="@drawable/shape_fragment_detail"
            android:overScrollMode="never"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon_close"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:onClick="@{backClickListener}"
                    android:src="@drawable/icon_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="20dp"
                    app:error="@{@drawable/icon_round_y}"
                    app:imageUrl="@{product.icon}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:placeHolder="@{@drawable/icon_round_p}"
                    app:round="@{true}" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{product.name}"
                    android:textColor="#FF000000"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/logo" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/shape_detail_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title">


                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:includeFontPadding="false"
                        android:textColor="@color/color_high_light"
                        android:textSize="@dimen/high_light_sp20"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:thousandNum="@{product.amount}" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:includeFontPadding="false"
                        android:text="@string/loan_amount"
                        android:textColor="@color/color_low_light"
                        android:textSize="@dimen/gray_light_sp13"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:includeFontPadding="false"
                        android:text='@{product.interest_rate}'
                        android:textColor="@color/color_high_light"
                        android:textSize="@dimen/high_light_sp20"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="24dp"
                        android:includeFontPadding="false"
                        android:text="@string/interests_rate"
                        android:textColor="@color/color_low_light"
                        android:textSize="@dimen/gray_light_sp13"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />


                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:includeFontPadding="false"
                        android:text='@{product.period}'
                        android:textColor="@color/color_high_light"
                        android:textSize="@dimen/high_light_sp20"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.526"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:includeFontPadding="false"
                        android:text="@string/time_period"
                        android:textColor="@color/color_low_light"
                        android:textSize="@dimen/gray_light_sp13"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.526"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:includeFontPadding="false"
                        android:text="@{product.process_time}"
                        android:textColor="@color/color_high_light"
                        android:textSize="@dimen/high_light_sp20"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.526"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="24dp"
                        android:includeFontPadding="false"
                        android:text="@string/loan_processing_time"
                        android:textColor="@color/color_low_light"
                        android:textSize="@dimen/gray_light_sp13"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.526"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/icon_eligibility"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/icon_eligibility"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="27dp"
                    android:includeFontPadding="false"
                    android:text="@string/eligibility"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/icon_eligibility"
                    app:layout_constraintTop_toBottomOf="@id/card1" />

                <LinearLayout
                    android:id="@+id/ll_eligibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/shape_detail_2"
                    android:orientation="vertical"
                    android:paddingStart="17dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="25dp"
                    android:paddingBottom="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/icon_eligibility"
                    android:animateLayoutChanges="true"/>

                <ImageView
                    android:id="@+id/refresh"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/icon_refresh"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_eligibility" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="22dp"
                    android:includeFontPadding="false"
                    android:text="@string/loan_process"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@id/refresh"
                    app:layout_constraintTop_toBottomOf="@id/ll_eligibility" />

                <FrameLayout
                    android:id="@+id/fl_process"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/shape_detail_2"
                    android:padding="20dp"
                    app:layout_constraintTop_toBottomOf="@id/refresh">

                    <ImageView
                        android:id="@+id/process"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_process" />

                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fl_process" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_common"
            android:gravity="center"
            android:onClick="@{buttonClickListener}"
            android:text="@string/apply_now"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>


</layout>